2000-12-07  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Resend.pm (_within_limits): 
	* lib/Mj/List.pm (describe_class): 
	* lib/Mj/Format.pm (digest):
	Import time_to_str from Mj::Util and call it instead of
	List::_time_to_str.

	* lib/Majordomo.pm (_report): 
	* lib/Mj/Parser.pm (parse_part): 
	* lib/Mj/List.pm (make_setting): 
	* lib/Mj/Config.pm (parse_limits): 
	* lib/Mj/Archive.pm (expand_range): 
	* lib/Mj/Access.pm (_a_delay):
	Import str_to_time from Mj::Util and call it instead of
	List::_str_to_time.

	* lib/Mj/Util.pm: Add str_to_time, time_to_str, and
	_str_to_time_dm, and export the first two.
	(process_rule): Call str_to_time instead of
	Mj::List::_str_to_time.

	* lib/Mj/List.pm: Remove _str_to_time, _str_to_time_dm, and
	_time_to_str.

2000-12-07  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (dispatch)  Alter mode checking to
	give an error instead of silently ignoring invalid punctuation.
	(_createlist)  Convert the aliases setting from flags to
	enumerated format if necessary.

	* lib/Mj/Access.pm:  (list_access_check)  The data used to 
	check time constraints on access rules are now a list
	of lists rather than a scalar value.   Treat the master_password
	variable as an integer instead of a boolean value.  This
	allows administrative passwords to be differentiated by type.

	* lib/Mj/BounceHandler.pm:  (handle_bounce_message, 
	handle_bounce_token)  Use the first owner's address as the 
	envelope sender to avoid loops if the majordomo-owner address
	malfunctions.

	* lib/Mj/Config.pm:  (get)  Return a scalar value if a
	supposed listref is not a reference.
	(parse_flags)  Remove unused routine.
	(_compile_rule)  Revise time constraints to use a 2d listref.

	* lib/Mj/List.pm:  (set)  Revise handling of flags to
	convert configuration settings automatically from the old, 
	abbreviated format to the new, enumerated format.  The
	allowed_flags setting now treats each flag individually,
	instead of grouping ack and hide flags.